<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:title="@string/appearance"
        >
        <CheckBoxPreference 
            android:key="prefFullScreen"
            android:defaultValue="false"
            android:title="@string/pfullscreentitle"
            android:summary="@string/pfullscreentitle"
            />
    </PreferenceCategory>
       <PreferenceCategory android:title="@string/email">
       <EditTextPreference
           android:key="prefUser"
           android:summary="@string/email_username_summary"
           android:title="@string/email_username" />
       <EditTextPreference
           android:key="prefPass"
           android:summary="@string/email_pass_summary"
           android:title="@string/email_pass" />
       <EditTextPreference
           android:key="prefSent"
           android:summary="@string/email_sent_summary"
           android:title="@string/email_sent_to" />
   </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
       <Preference android:title="@string/about_summary" android:key="prefAbout"/>       
   </PreferenceCategory>
   <PreferenceCategory android:title="Developer">
       <Preference android:title="Developer Options" android:key="prefDev"
           android:enabled="true"/>       
   </PreferenceCategory>
   <PreferenceCategory android:title="Release Note">
       <Preference android:title="Change Log" android:key="prefRelease"
           android:enabled="true"/>       
   </PreferenceCategory>

</PreferenceScreen>
