<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/h_name"
                android:padding="2dp" />

            <EditText
                android:id="@+id/contact_no"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/h_contactno"
                android:padding="2dp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/h_address"
                android:minLines="4"
                android:padding="2dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/add_picture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:onClick="onAddPicture"
                    android:text="@string/add_media" />

                <ImageView
                    android:id="@+id/picviewer"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottombar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/buttonbottombar"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@id/buttonbottombar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClear"
                android:textColor="#FFFFFF"
                android:background="@drawable/selectable_item_background"
                android:text="@string/clear" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onSubmit"
                android:textColor="#FFFFFF"
                android:background="@drawable/selectable_item_background"
                android:text="@string/submit" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>